--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ section{
 
 .chamada{
 
-    background: rgb(184,156,213);
+    background: rgb(236, 3, 100);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -39,4 +39,34 @@ h1{
 
 p{
     font-size: 20px;
+}
+
+img {
+    height: 200px
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+.categoria-videos img{
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover{
+    opacity: 1.0;
+    border: 3px solid green;
+}
+
+.categoria h2{
+    color: rgb(42,122,228)
 }
